[tool.poetry]
name = "pzflow"
version = "3.2.0"
description = "Probabilistic modeling of tabular data with normalizing flows."
authors = ["John Franklin Crenshaw <jfcrenshaw@gmail.com>"]
license = "MIT"
repository = "https://github.com/jfcrenshaw/pzflow"
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.10"
jax = ">=0.5.3"
jaxlib = ">=0.5.3"
optax = ">=0.2.4"
pandas = ">=2.2.3"
dill = ">=0.3.9"
tqdm = ">=4.67.1"

[tool.poetry.group.dev.dependencies]
pre-commit = ">=4.2.0"
black = ">=25.1.0"
mypy = ">=1.15.0"
isort = ">=6.0.1"
flake8 = ">=7.2.0"
flake8-bugbear = ">=24.12.12"
flake8-builtins = ">=2.5.0"
flake8-comprehensions = ">=3.16.0"
flake8-docstrings = ">=1.7.0"
flake8-isort = ">=6.1.2"
flake8-markdown = ">=0.6.0"
flake8-print = ">=5.0.0"
flake8-pytest-style = ">=2.1.0"
flake8-simplify = ">=0.21.0"
flake8-tidy-imports = ">=4.11.0"
pep8-naming = ">=0.14.1"
pandas-vet = ">=2023.8.2"
pytest = ">=8.3.5"
pytest-cov = ">=6.0.0"
pytest-xdist = ">=3.6.1"
jupyter = ">=1.1.1"
matplotlib = ">=3.10.1"
toml = ">=0.10.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length=79

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 79

[tool.pyright]
reportGeneralTypeIssues = false
