[metadata]
name = package_name
version = attr: package.__version__
author = John Franklin Crenshaw
author_email = jfc20@uw.edu
description = 
    Package description 
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
classifiers = 
    License :: OSI Approved :: MIT License
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering
    Operating System :: OS Independent
    Programming Language :: Python

[options]
packages = find:
#python_requires = >=3.5, <3.9
#install_requires =
#    numpy
setup_requires = pytest-runner
tests_require = pytest

[options.extras_require]
interactive = 
    matplotlib
    jupyter
    jupyterlab