[metadata]
name = pzflow
version = attr: pzflow.__version__
author = John Franklin Crenshaw
author_email = jfc20@uw.edu
description = 
    Modeling galaxy redshifts and magnitudes with a normalizing flow
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
classifiers = 
    License :: OSI Approved :: MIT License
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering
    Operating System :: OS Independent
    Programming Language :: Python

[options]
packages = find:
install_requires =
    jax
    jaxlib == 0.1.57
setup_requires = pytest-runner
tests_require = pytest

[options.extras_require]
dev = 
    pytest
    black